# internal/localapi/router.go
@@ -92,6 +92,12 @@ func (r *Router) setupRoutes() {
 	r.mux.HandleFunc("/v3/system/config", chainMiddleware(withRoute("/v3/system/config", r.v3Handler.HandleConfig), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/system/controller/cert", chainMiddleware(withRoute("/v3/system/controller/cert", r.v3Handler.HandleSystemControllerCert), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/system/config/switch", chainMiddleware(withRoute("/v3/system/config/switch", r.v3Handler.HandleSystemConfigSwitch), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/images", chainMiddleware(withRoute("/v3/images", r.v3Handler.HandleImages), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/images:pull", chainMiddleware(withRoute("/v3/images:pull", r.v3Handler.HandleImagePull), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/images:pull/", chainMiddleware(withRoute("/v3/images:pull/", r.v3Handler.HandleImagePullStatus), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/images:load", chainMiddleware(withRoute("/v3/images:load", r.v3Handler.HandleImageLoad), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/images:prune", chainMiddleware(withRoute("/v3/images:prune", r.v3Handler.HandleImagePrune), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/images:remove", chainMiddleware(withRoute("/v3/images:remove", r.v3Handler.HandleImageRemove), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 
 	r.mux.HandleFunc("/v3/microservices/config", chainMiddleware(withRoute("/v3/microservices/config", r.v3Handler.HandleMicroserviceConfigSelf), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/microservices/control", r.controlWSHandler.Handle)
@@ -99,12 +105,14 @@ func (r *Router) setupRoutes() {
 	r.mux.HandleFunc("/v3/ms", chainMiddleware(withRoute("/v3/ms", r.v3Handler.HandleMicroservices), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/ms/", chainMiddleware(withRoute("/v3/ms/", r.v3Handler.HandleMicroservices), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/deploy/microservices:apply", chainMiddleware(withRoute("/v3/deploy/microservices:apply", r.v3Handler.HandleDeployMicroservicesApply), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/deploy/microservices:apply/", chainMiddleware(withRoute("/v3/deploy/microservices:apply/", r.v3Handler.HandleDeployMicroservicesApplyStatus), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/deploy/microservices:validate", chainMiddleware(withRoute("/v3/deploy/microservices:validate", r.v3Handler.HandleDeployMicroservicesValidate), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/deploy/microservices", chainMiddleware(withRoute("/v3/deploy/microservices", r.v3Handler.HandleDeployMicroservices), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/deploy/microservices/", chainMiddleware(withRoute("/v3/deploy/microservices/", r.v3Handler.HandleDeployMicroservices), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/deploy/registries:apply", chainMiddleware(withRoute("/v3/deploy/registries:apply", r.v3Handler.HandleDeployRegistriesApply), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/deploy/registries:validate", chainMiddleware(withRoute("/v3/deploy/registries:validate", r.v3Handler.HandleDeployRegistriesValidate), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/deploy/registries", chainMiddleware(withRoute("/v3/deploy/registries", r.v3Handler.HandleDeployRegistries), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
+	r.mux.HandleFunc("/v3/deploy/registries/", chainMiddleware(withRoute("/v3/deploy/registries/", r.v3Handler.HandleDeployRegistries), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/auth/whoami", chainMiddleware(withRoute("/v3/auth/whoami", r.authHandler.HandleWhoAmI), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/auth/tokens", chainMiddleware(withRoute("/v3/auth/tokens", r.v3Handler.HandleAuthTokens), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
 	r.mux.HandleFunc("/v3/auth/tokens/revoke", chainMiddleware(withRoute("/v3/auth/tokens/revoke", r.v3Handler.HandleAuthTokensRevoke), authMiddlewareV3, accessLoggingMiddleware, requestIdMiddleware))
